update before piclist

--- a/project_qusasa/qusasa/templates/admin/display_inquiry.html
+++ b/project_qusasa/qusasa/templates/admin/display_inquiry.html
@@ -132,7 +132,7 @@
   </style>
   <body>
 
-    <a class="log-out" href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i> Log out</a>
+    <a class="log-out" href="{% url 'logoutad' %}"><i class="fa-solid fa-right-from-bracket"></i> Log out</a>
 
     <div class="side-nav">
       <div class="side-nav-container">
