--- a/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_output.html
+++ b/project_qusasa/qusasa/templates/features_pages/channel_analysis/channel_analysis_output.html
@@ -1218,7 +1218,7 @@
 
         <div class="mini-container " id="section8">
             <div class="schedule-container">
-                <h1>Do you want to shedule your results?</h1>
+                <h1>Do you want to schedule your results?</h1>
                 <p>You can schedule the analysis to be recived at a certain times hourly, daily, or even monthly!</p>
                 <a href="{% url 'schedule_channel_analysis_form' %}"><button>Schedule my Analysis Now</button></a>
     
