--- a/project_qusasa/qusasa/templates/features_pages/playlist_analysis/playlist_analysis_output.html
+++ b/project_qusasa/qusasa/templates/features_pages/playlist_analysis/playlist_analysis_output.html
@@ -70,7 +70,103 @@ nav ul li:not(:last-child)::after {
     margin-left: 5px;
     margin-right: 2px;
 }
+.table-container {
+    width: 90%;
+    max-width: 90%;
+    overflow-x: scroll; /* Always show horizontal scrollbar */
+    border-radius: 8px;
+    -webkit-overflow-scrolling: touch; /* Improves scrolling on touch devices */
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: #888 #f1f1f1; /* For Firefox: scrollbar thumb and track colors */
+}
 
+/* For Webkit (Chrome, Safari, etc.) */
+.table-container::-webkit-scrollbar {
+    height: 8px; /* Height of the scrollbar */
+}
+
+.table-container::-webkit-scrollbar-thumb {
+    background: #888; /* Color of the scrollbar thumb */
+    border-radius: 4px;
+}
+
+.table-container::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Color of the scrollbar track */
+    border-radius: 4px;
+}
+table {
+    position: relative;
+    border-collapse: collapse;
+    width: 100%; /* Adjusted to fill the container */
+    font-size: 0.7rem;
+    transition: 0.3s ease; /* Smooth transition for background color */
+}
+
+
+/* Style the table headers and cells */
+th, td {
+text-align: left;
+padding: 8px; /* Adjust padding as needed */
+color: white; /* White text */
+border-bottom: 1px solid rgba(48, 38, 114, 0.617); /* White borders between rows */
+transition: background-color 0.3s; /* Transition for background color change */
+
+}
+
+/* Style for the table headers */
+th {
+background-color: #4f508a; /* Darker shade of purple for headers */
+}
+
+/* Style for the table cells */
+td {
+background-color: #777ca9; /* Muted purple background for cells */
+}
+
+/* When hovering over the table, darken the shade of headers and cells */
+table:hover th {
+background-color: #454597; /* Darker shade for headers on table hover */
+}
+
+table:hover td {
+background-color: #6e75b0; /* Darker shade for cells on table hover */
+}
+
+table:hover {
+transform: translateY(-10px);
+transition: transform 0.3s ease;
+}
+.dataset-preview h3 {
+    margin-top: 2rem;
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
+    width: 90%;
+    text-align: left;
+
+
+}
+.mini-container {
+    background: rgb(8, 14, 77);
+    padding: 5rem 0;
+    border-radius: 50px;
+    margin: 3rem 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    border: 1px solid #7587ff;
+    box-shadow: 0 0 30px 10px #6b4e8f76;
+
+}
+
+.dataset-preview p {
+    text-align: left;
+    font-size: 1rem;
+    margin: 0;
+    width: 90%;
+}
 </style>
   </head>
   <body>
@@ -134,6 +230,33 @@ nav ul li:not(:last-child)::after {
             </div>
 
         </div>
+        <div class="mini-container dataset-preview">
+            <h2 data-aos="fade-up">Datasets Preview</h2>
+            {% for dataset_name, dataset_info in datasets.items %}
+                <h3 data-aos="fade-up">{{ dataset_name }} Preview (First 3 Rows)</h3>
+                <div class="table-container">
+                <table data-aos="fade-up">
+                    <thead>
+                        <tr>
+                            {% for header in dataset_info.preview.0.keys %}
+                                <th>{{ header }}</th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in dataset_info.preview %}
+                            <tr>
+                                {% for cell in row.values %}
+                                    <td>{{ cell|truncatechars:20 }}</td>
+                                {% endfor %}
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+                <p data-aos="fade-up">{{ dataset_info.dimensions }}</p>
+            {% endfor %}
+            </div>
 
         <div class="mini-container stats-graphs-container" id="section2">
             <div class="stats-graphs" data-aos="fade-up">
@@ -563,6 +686,13 @@ nav ul li:not(:last-child)::after {
 <script id="json-data" type="application/json">{{ json_data|safe }}</script>
 
 <script>
+    function formatDateKey(timestamp) {
+        var date = new Date(timestamp);
+        var year = date.getFullYear();
+        var month = (date.getMonth() + 1).toString().padStart(2, '0'); // Ensure two-digit month
+        var day = date.getDate().toString().padStart(2, '0'); // Ensure two-digit day
+        return `${year}-${month}-${day}`;
+    }
 
     var jsonData = JSON.parse(document.getElementById('json-data').textContent);
 
@@ -574,52 +704,81 @@ nav ul li:not(:last-child)::after {
     var videos_views = jsonData.videos_views.reverse()
     var videos_commentCount = jsonData.videos_commentCount.reverse()
 
-    var seriesData = videos_publishedAt.map(function(date, index) {
-        return {
-            x: new Date(date).getTime(), // Convert to timestamp
-            y: videos_views[index]
-        };
+    var totalViews = jsonData.totalViews
+    var totalLikes = jsonData.totalLikes
+    var totalComments = jsonData.totalComments
+    var dailyData = {};
+    videos_publishedAt.forEach((date, index) => {
+        var key = formatDateKey(new Date(date).getTime()); // Convert each date to a "YYYY-MM-DD" key
+    
+        // Initialize the key if it does not exist
+        if (!dailyData[key]) {
+            dailyData[key] = { views: 0, likes: 0, comments: 0 };
+        }
+    
+        // Aggregate data by day
+        dailyData[key].views += videos_views[index];
+        dailyData[key].likes += videos_likes[index];
+        dailyData[key].comments += videos_commentCount[index];
     });
+    
+    // Prepare series data for charting
+    var seriesData = Object.entries(dailyData).map(([key, data]) => ({
+        x: key, // 'YYYY-MM-DD'
+        y: data.views
+    }));
+    
+    var seriesDataLikes = Object.entries(dailyData).map(([key, data]) => ({
+        x: key, // 'YYYY-MM-DD'
+        y: data.likes
+    }));
+    
+    var seriesDataComments = Object.entries(dailyData).map(([key, data]) => ({
+        x: key, // 'YYYY-MM-DD'
+        y: data.comments
+    }));
+    
+    var bins = [
+    { min: 0, max: 60, label: '< 1 min' },
+    { min: 61, max: 300, label: '1 to 5 min' },
+    { min: 301, max: 600, label: '5 to 10 min' },
+    { min: 601, max: 1200, label: '10 to 20 min' },
+    { min: 1201, max: 1800, label: '20 to 30 min' },
+    { min: 1801, max: 3600, label: '30 min to 1 hr' },
+    { min: 3601, max: Infinity, label: '> 1 hr' }
+];
+var binData = bins.map(bin => ({
+    ...bin,
+    totalViews: 0,
+    totalLikes: 0,
+    totalComments: 0,
+    count: 0
+}));
+videos_duration.forEach((duration, index) => {
+    let seconds = duration * 60; // Assuming duration is in minutes
+    let bin = binData.find(b => seconds >= b.min && seconds <= b.max);
+    if (bin) {
+        bin.totalViews += videos_views[index];
+        bin.totalLikes += videos_likes[index];
+        bin.totalComments += videos_commentCount[index];
+        bin.count++;
+    }
+});
 
-    var seriesDataLikes = videos_publishedAt.map(function(date, index) {
-        return {
-            x: new Date(date).getTime(), // Convert to timestamp
-            y: videos_likes[index]
-        };
-    });
+var seriesDataDur = binData.map(bin => ({
+    x: bin.label,
+    y: bin.count ? bin.totalViews / bin.count : 0
+}));
 
+var seriesDataLikesDur = binData.map(bin => ({
+    x: bin.label,
+    y: bin.count ? bin.totalLikes / bin.count : 0
+}));
 
-    var seriesDataComments = videos_publishedAt.map(function(date, index) {
-        return {
-            x: new Date(date).getTime(), // Convert to timestamp
-            y: videos_commentCount[index]
-        };
-    });
-
-    var seriesDataDur = videos_duration.map(function(time, index) {
-        return {
-            x: time, // Convert to timestamp
-            y: videos_views[index]
-        };
-    });
-
-    var seriesDataLikesDur = videos_duration.map(function(time, index) {
-        return {
-            x: time, // Convert to timestamp
-            y: videos_likes[index]
-        };
-    });
-
-
-    var seriesDataCommentsDur = videos_duration.map(function(time, index) {
-        return {
-            x: time, // Convert to timestamp
-            y: videos_commentCount[index]
-        };
-    });
-
-
-
+var seriesDataCommentsDur = binData.map(bin => ({
+    x: bin.label,
+    y: bin.count ? bin.totalComments / bin.count : 0
+}));
     console.log(videos_publishedAt)
     console.log(videos_views)
     var options1 = {
@@ -681,10 +840,7 @@ nav ul li:not(:last-child)::after {
         },
         xaxis: {
             type: "datetime",
-            labels: {
-                formatter: function(value, timestamp) {
-                    return new Date(timestamp).getFullYear();
-                }}
+
         },
         
         yaxis: {
@@ -707,6 +863,11 @@ nav ul li:not(:last-child)::after {
         var chart3 = new ApexCharts(document.querySelector("#comment-chart"), options3);
 
         chart1.render();
+        setTimeout(() => {
+            chart1.updateOptions({
+            });
+          
+          }, 2000);
 
         var chart1Options = chart1.w.config;
 
@@ -720,7 +881,11 @@ nav ul li:not(:last-child)::after {
         views_chart.fill = {}
 
         chart2.render();
-
+        setTimeout(() => {
+            chart2.updateOptions({
+            });
+          
+          }, 2000);
         var chart2Options = chart2.w.config;
 
         var likes_chart = deepCopy(chart2Options);
@@ -733,8 +898,13 @@ nav ul li:not(:last-child)::after {
         likes_chart.fill = {}
 
         chart3.render();
-
+        setTimeout(() => {
+            chart3.updateOptions({
+            });
+          
+          }, 2000);
         var chart3Options = chart3.w.config;
+
 
         var comments_chart = deepCopy(chart3Options);
         comments_chart.chart.foreColor = '#000'; // Set text color to black
@@ -805,14 +975,23 @@ nav ul li:not(:last-child)::after {
             ],
             tooltip: {
                 theme: "dark",
-            
+                y: {
+                    formatter: function (value) {
+                        return Math.round(value); // Tooltip also shows rounded values
+                    }
+                }
             },
             xaxis: {            
             },
             
             yaxis: {
                 min: 0,
-                tickAmount: 4
+                tickAmount: 4,
+                labels: {
+                    formatter: function (value) {
+                        return Math.round(value); // Ensuring y-axis labels are whole numbers
+                    }
+                }
             },
             grid: {
                 show: true
@@ -831,7 +1010,11 @@ nav ul li:not(:last-child)::after {
         var chart6 = new ApexCharts(document.querySelector("#comment-chart-dur"), options6);
 
         chart4.render();
-
+        setTimeout(() => {
+            chart4.updateOptions({
+            });
+          
+          }, 2000);
         var chart4Options = chart4.w.config;
 
         var views_chart_dur = deepCopy(chart4Options);
@@ -845,6 +1028,11 @@ nav ul li:not(:last-child)::after {
 
         chart5.render();
 
+        setTimeout(() => {
+            chart5.updateOptions({
+            });
+          
+          }, 2000);
         var chart5Options = chart5.w.config;
 
         var likes_chart_dur = deepCopy(chart5Options);
@@ -858,6 +1046,11 @@ nav ul li:not(:last-child)::after {
 
 
         chart6.render();
+        setTimeout(() => {
+            chart6.updateOptions({
+            });
+          
+          }, 2000);
 
         var chart6Options = chart6.w.config;
 
